--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,20 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.24.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
+
+    </dependencies>
 
 </project>
